argocd/apps/demo-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: app.titov-ev.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app
                port:
                  number: 80
